<resources>
    <string name="app_name">MyNavigationDrawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_cart">Cart</string>
    <string name="menu_map">Maps</string>
    <string name="menu_hotel">Hotel</string>
    <string name="menu_subway">Subway</string>
    <string name="action_bar">Action Bar Activity</string>

    <string name="this_activity">Ini adalah menu activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_activity">FRAGMENT ACTIVITY</string>
    <string name="search">Search</string>
    <string name="title_activity_my_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="tab_layout_single">Tab Layout Single</string>
</resources>