<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_razky"
            android:icon="@drawable/ic_baseline_accessibility_new_24"
            android:title="Razky" />
    </group>

    <item android:title="@string/menu_map">
        <menu>
            <item
                android:id="@+id/nav_activityActionBar"
                android:icon="@drawable/ic_map"
                android:title="@string/action_bar" />
            <item
                android:id="@+id/nav_activityBottomNavigation"
                android:icon="@drawable/ic_map"
                android:title="@string/bottom_navigation" />
            <item
                android:id="@+id/nav_activityTabLayout"
                android:icon="@drawable/ic_map"
                android:title="@string/tab_layout" />
            <item
                android:id="@+id/nav_activityTabLayoutSingle"
                android:icon="@drawable/ic_map"
                android:title="@string/tab_layout_single" />

            <item
                android:id="@+id/nav_subway"
                android:icon="@drawable/ic_subway"
                android:title="@string/menu_subway" />
        </menu>
    </item>

</menu>