<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.feylabs.navigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_navdraw" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.feylabs.navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.feylabs.navigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.feylabs.navigationdrawer.ui.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_razky"
        android:name="com.feylabs.navigationdrawer.ui.razky.RazkyFragment"
        android:label="fragment_razky"
        tools:layout="@layout/fragment_razky" />

    <activity
        android:id="@+id/nav_activityActionBar"
        android:name="com.feylabs.navigationdrawer.action_bar.ActionBarActivity"
        android:label="activity_action_bar"
        tools:layout="@layout/activity_action_bar" />
    <activity
        android:id="@+id/nav_activityBottomNavigation"
        android:name="com.feylabs.navigationdrawer.bottom_navigation.MyBottomNavigation"
        android:label="MyBottomNavigation" />

</navigation>